--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ find_package(Boost 1.72.0 REQUIRED COMPONENTS system filesystem)
 
 include_directories(${Boost_INCLUDE_DIR})
 
-file(GLOB sources CONFIGURE_DEPENDS CJson/*.cpp CJson/*.h CJson/*.hpp)
+file(GLOB sources CONFIGURE_DEPENDS CJson/*.cpp CJson/*.h CJson/*.hpp hfsh/*.h hfsh/*.cpp)
 
-add_executable(${PROJECT_NAME} main.cpp ${sources} hfsh/OrderBase.cpp hfsh/OrderBase.h hfsh/SendProgram.cpp hfsh/SendProgram.h MediaGatewayLayout.cpp MediaGatewayLayout.h)
+add_executable(${PROJECT_NAME} main.cpp ${sources} MediaGatewayLayout.cpp MediaGatewayLayout.h)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Poco::Foundation Poco::Net Poco::Zip Boost::system Boost::filesystem)
